<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group
        android:id="@+id/add_radio"
        android:visible="false">

        <item
            android:id="@+id/action_radio"
            android:icon="@drawable/ic_radio_black_24dp"
            android:title="@string/action_radio" />

        <item
            android:id="@+id/action_equalizer0"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/action_equalizer" />

        <item
            android:id="@+id/action_timer0"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/action_sleep_timer" />

    </group>

    <group android:id="@+id/haut_default">

        <item
            android:id="@+id/action_equalizer"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/action_equalizer" />

        <item
            android:id="@+id/action_timer"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/action_sleep_timer" />

    </group>



        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/update" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/exit" />


</menu>