<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/dialogPadding"
    android:paddingBottom="@dimen/dialogPadding"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:mContext=".dialog.SongEditorDialog">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent">

            <android.support.v7.widget.CardView
                style="@style/CardView.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                card_view:elevation="1dp">

                <ImageView
                    android:id="@+id/artwork"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/album_artwork"
                    android:scaleType="centerCrop" />

            </android.support.v7.widget.CardView>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:ems="15"
                    android:inputType="text" />

                <requestFocus />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/album"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/album"
                    android:ems="15"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/artist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/artist"
                    android:ems="15"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genre"
                    android:ems="15"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/year"
                    android:ems="3"
                    android:inputType="number"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="-"
                android:textSize="24sp" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/track_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/song_tag_track_number"
                    android:ems="3"
                    android:inputType="number"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="8dp"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:text="/"
                android:textSize="24sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/disc_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/disc_number"
                    android:ems="3"
                    android:inputType="number"
                    tools:ignore="HardcodedText" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_tag_comment" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:ems="10"
                android:background="@drawable/tag_edit_comment_background"
                android:inputType="textCapSentences|textMultiLine|textLongMessage" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>