<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/dialogPadding"
    android:paddingBottom="@dimen/dialogPadding"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:mContext=".dialog.AlbumEditorDialog">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent">

        <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            card_view:elevation="1dp">

            <ImageView
                android:id="@+id/artwork"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/album_artwork"
                android:scaleType="centerCrop" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album"
                android:ems="15"
                android:inputType="text" />

            <requestFocus />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/big_content_padding">

            <EditText
                android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/artist"
                android:ems="15"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/big_content_padding">

            <EditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
                android:ems="15"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/big_content_padding">

            <EditText
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:ems="3" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</LinearLayout>
