<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/track_info0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="2dp"
        android:gravity="right"
        android:text="zZz"
        android:textSize="12sp"
        android:textColor="@color/blue_900_trans"
        android:layout_marginRight="5dp"
        android:visibility="gone"
        tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/repeat0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:scaleType="center"
                android:src="@drawable/ic_repeat_grey_400_24dp"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/quick_prev0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/prev"
                android:scaleType="center"
                android:src="@drawable/ic_fast_rewind_amber_a700_36dp"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/play_pause_toggle0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/play"
                android:scaleType="center"
                android:src="@drawable/ic_play_circle_filled_amber_a700_48dp"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/quick_next0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/next"
                android:scaleType="center"
                android:src="@drawable/ic_fast_forward_amber_a700_36dp"
                android:padding="10dp" />


            <ImageView
                android:id="@+id/shuffle0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="10dp"
                android:scaleType="center"
                android:src="@drawable/ic_shuffle_grey_400_24dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>


</RelativeLayout>
